<resources>
    <string name="app_name">TestTask</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date">Date</string>
    <string name="any">Any</string>
    <string name="title">Suburban and intercity \ntransport timetables</string>
    <string name="find">Find</string>
    <string name="error_no_input_output">Error</string>
    <string name="error_no_way">Error</string>
    <string name="loading">Loading</string>
    <string name="time_in_travel" translatable="false">HH:MM</string>
</resources>