<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Fragments.MainFragment.MainFragment"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/station_from"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/from" />
            <EditText
                android:id="@+id/station_to"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/to" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/change"
            android:layout_gravity="center"
            android:src="@drawable/sync"
            android:scaleType="fitCenter"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="8dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/day_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:checkedButton="@+id/today"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/today"
            android:text="@string/today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tomorrow"
            android:text="@string/tomorrow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?attr/materialButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar"
            app:icon="@drawable/calendar"
            app:iconSize="16dp"
            app:iconGravity="end"
            android:text="@string/date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?attr/materialButtonOutlinedStyle"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/transport_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@id/any"
        android:layout_marginBottom="16dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/any"
            android:text="@string/any"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?attr/materialButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/plane"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            app:icon="@drawable/plane"
            app:iconSize="24dp"
            style="?attr/materialIconButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/train"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            app:icon="@drawable/train"
            app:iconSize="24dp"
            android:gravity="center"
            style="?attr/materialIconButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/suburbun"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/suburban"
            android:paddingHorizontal="20dp"
            app:iconSize="24dp"
            style="?attr/materialIconButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:iconSize="24dp"
            android:paddingHorizontal="20dp"
            app:icon="@drawable/bus"
            style="?attr/materialIconButtonOutlinedStyle"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/find"
        app:cornerRadius="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/response_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"/>
</LinearLayout>

